# Millennium-Clipboard

./: .gitignore  .inst1.log.err  .inst2.log.err  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.json
.claude/hooks/: check-code.cjs  session-start.sh
.claude/skills/cierre/: SKILL.md
.claude/skills/inicio/: SKILL.md
.claude/skills/smoke/: SKILL.md
.github/workflows/: android-cfg-gate.yml  build.yml  displays-tests.yml  release.yml
_archive/mockup/: style.css
docs/: CHANGELOG.md  DECISIONS.md  SESSION_HANDOFF.md  SPEC-displays-v2-fase2.md  SPEC-displays-v2.md  SPEC-displays.md  SPEC-ui-polish.md  TODO.md
docs/archive/: SPEC-displays-v2-fase2.md  SPEC-displays-v2.md  SPEC-ui-polish.md  phase-0-stop-the-bleed.md  phase-1-discovery.md  phase-2-correctness.md  phase-3-security.md
docs/remediation/: 00-SHARED-CONTEXT.md  README.md
docs/remediation/android/: SPEC.md  phase-A-lifecycle-and-approval.md  phase-B-discovery-and-storage.md  phase-C-clipboard-qr-mobile.md
docs/remediation/windows/: SPEC.md  phase-0-stop-the-bleed.md  phase-1-discovery.md  phase-2-correctness.md  phase-3-security.md
mockup/: app.js  index.html  style.css
src/: index.html  main.js  pre.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/displays-tests/: Cargo.toml
src-tauri/displays-tests/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: aliases.rs  android_fs_bridge.rs  clipboard_sync.rs  discovery.rs  http_client.rs  http_server.rs  icon_overrides.rs  identity.rs  json_store.rs  lib.rs  main.rs  manual_peers.rs  preferences.rs  runtime_log.rs  settings.rs  thumbnails.rs  udp_discovery.rs  updater.rs  windows_integration.rs
src-tauri/src/displays/: apply.rs  backend.rs  enumerate.rs  ids.rs  mod.rs  store.rs  system_events.rs  topology.rs  watchdog.rs  win32_types.rs
