[package]
name = "millennium-clipboard"
version = "0.4.0"
description = "Share text and files between devices on the same LAN"
authors = ["guidocameraeq"]
edition = "2021"

[lib]
name = "millennium_clipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# mDNS discovery and identity (Fase 3)
mdns-sd = "0.13"
local-ip-address = "0.6"
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }

# HTTPS server + cert identity (Fase 4)
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "sync", "time"] }
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"

# HTTPS client for sending payloads to peers (Fase 5)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Force ring as the rustls crypto provider so axum-server + reqwest agree
rustls = { version = "0.23", features = ["ring"] }

# File transfer (Fase 7)
tauri-plugin-dialog = "2"
mime_guess = "2"
bytes = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

