[package]
name = "millennium-clipboard"
version = "1.2.0"
description = "Share text and files between devices on the same LAN"
authors = ["guidocameraeq"]
edition = "2021"

[lib]
name = "millennium_clipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# mDNS discovery and identity (Fase 3)
mdns-sd = "0.13"
local-ip-address = "0.6"
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }

# HTTPS server + cert identity (Fase 4)
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "sync", "time"] }
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"

# HTTPS client for sending payloads to peers (Fase 5)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Force ring as the rustls crypto provider so axum-server + reqwest agree.
# The dangerous ServerCertVerifier API (the fingerprint pinning verifier in
# http_client.rs, Fase 3 Tarea 3.1) is available without a feature flag in
# rustls 0.23 (the old `dangerous_configuration` feature was removed).
rustls = { version = "0.23", features = ["ring"] }

# File transfer (Fase 7)
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

# QR code generation (Fase v0.10 — peer pairing)
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

# Thumbnail generation (Fase 3) + clipboard image (Fase 4)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
mime_guess = "2"
bytes = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# UDP broadcast discovery + low-level socket options (v0.8.0)
socket2 = { version = "0.5", features = ["all"] }
env_logger = "0.11"
log = "0.4"

# --- target-specific deps below this line ---

# Clipboard sync (v0.6.0) — arboard does not compile on Android.
# Android handles clipboard via tauri-plugin-clipboard-manager (added
# later when the foreground service lands).
[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3"

# Windows registry access for AUMID notification fix
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

# Atajos de teclado globales por perfil (Displays v2, Fase 1). Va en la tabla
# windows a propósito: Android NO debe verlo. Consecuencia obligatoria: el
# registro del plugin en lib.rs también va bajo #[cfg(target_os = "windows")]
# (no #[cfg(desktop)], que incluiría mac/linux sin la dep). Re-exporta los tipos
# de `global_hotkey`: Shortcut = HotKey, ShortcutState = HotKeyState.
tauri-plugin-global-shortcut = "2"

# Crate puro `monarch` vendorizado (SPEC-displays, Fase 1): los tipos del modelo
# de displays (DisplayId/DisplayInfo/Layout/OutputConfig/Resolution/Position) y
# ManagerError, que es lo que habla el motor CCD de `src/displays/`. Copia de
# guidocameraeq/Monarch @ 7f9f63b — ver vendor/monarch/PROVENANCE.md.
#
# Va DENTRO del target-table de Windows a propósito: es un path-dep, y si viviera
# en [dependencies] se compilaría también para Android. Verificado empíricamente
# que un crate anidado NO se vuelve miembro implícito del workspace (cargo
# metadata ⇒ workspace_members = [millennium-clipboard] solo), así que NO mueve el
# [profile.release] panic="abort" de abajo.
monarch = { path = "vendor/monarch" }

# CCD (Connecting and Configuring Displays) API para el módulo de displays
# (SPEC-displays, migrado de Monarch). raw-dylib ⇒ no necesita import libs del
# Windows SDK; el link lo prueba el CI (Fase 0). SOLO bajo cfg(windows): Android
# NO debe ver este crate. Pin 0.60 (convive con el 0.61.x transitivo de
# tauri/wry; son tipos INCOMPATIBLES entre sí — nunca cruzar un handle de la API
# de Tauri a una función de acá sin pasar por isize/raw).
#
# De estas 10 features, la Fase 1 (read-only) ejerce solo DOS:
# Win32_Devices_Display (Query/GetDisplayConfig*) y Win32_Foundation
# (ERROR_INSUFFICIENT_BUFFER). Las otras 8 quedan declaradas porque el CI de la
# Fase 0 ya probó que ESTE set linkea, y las consume el resto del motor cuando
# llegue: Gdi/Com/ColorSystem/Shell → apply + calibración de color (Fase 2);
# LibraryLoader/WindowsAndMessaging → la ventana oculta del watcher
# WM_DISPLAYCHANGE (Fase 3); Security/System_Threading → sin uso previsto.
windows = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Devices_Display",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_ColorSystem",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

# Mobile-only plugins (Android / iOS)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

# Android-only plugin: lets Rust open `content://` URIs that the SAF
# file picker returns, and write to MediaStore-tracked public folders
# (Pictures / Downloads) so Gallery indexes the files automatically.
# Without this we can't actually accept files from Android's picker.
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "28"

# Release binary: size-optimized (~25 MB → ~8-12 MB). panic="abort"
# still runs our panic hook (crash.log) — it only skips the unwinding
# that would happen AFTER the hook. Trade-off (spec'd in phase 0): with
# abort, a panic in ANY task/thread takes down the whole process, where
# unwind would have killed just that tokio task. Acceptable here — a
# panicked poller leaving a frozen peer list is worse than a clean crash
# with a crash.log. Dev profile stays untouched (unwind, fast builds).
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"

